RTS-6990 Fixed styling that made office tabs overlap office hours
Default styling of ui-tabs made office tabs overlap office hours.
The error was not visible until the link elements got background
color. By default the li and a were floated elements. Removing the
float and some other minor adjustments fixed the layout.

--- a/themes/uib_zen/sass/modules/_offices.scss
+++ b/themes/uib_zen/sass/modules/_offices.scss
@@ -9,9 +9,15 @@ $zen-column-count: 5;
   @include zen-clear();
   .ui-tabs-nav {
     @include zen-grid-item(2, 1);
-    li a {
-      white-space: normal;
-      width: 100%;
+    li {
+      float: none;
+      margin: 0;
+      a {
+        float: none;
+        white-space: normal;
+        display: block;
+        background: transparent;
+      }
     }
   }
   .group-office-hours {
@@ -132,14 +138,12 @@ $zen-column-count: 5;
     li.ui-state-default {
       border: none;
       background: transparent;
-      width: 100%;
       &:hover {
         background: silver;
       }
     }
     li.ui-state-active {
       background: #333;
-      width: 100%;
       &:hover {
         background: #333;
       }
